<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginBottom="25dp"
    tools:context=".MainActivity">

    <!-- Logo Aplikasi -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/tvSelamatDatang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"/>

    <!-- Username Field -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_username"
        android:drawableStart="@drawable/ic_person"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="text"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/ic_lock"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"/>

    <!-- Button Login -->

    <!-- Register Link -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>