<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".ConfirmationActivity">

    <!-- Judul Halaman -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_order_confirm"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <!-- Confirmation Nama Makanan -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        android:background="@drawable/rounded_background_tv"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvFoodNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name_confirm"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <!-- Confirmation Jumlah Porsi -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        android:background="@drawable/rounded_background_tv"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvServingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_servings"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvServings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <!-- Confirmation Nama Pengorder -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        android:background="@drawable/rounded_background_tv"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvOrderingNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordering_name_confirm"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvOrderingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <!-- Input Catatan Tambahan -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        android:background="@drawable/rounded_background_tv"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/additional_notes_confirm"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <!-- Thanks message -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks_order_confirm"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="24dp"/>

    <!-- Back to Menu Button -->
    <Button
        android:id="@+id/backtoMenu"
        android:backgroundTint="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:padding="10dp"/>

</LinearLayout>
